Criação de endpoint de cadastrar usuário com senha
