# src/api/controller/UsuarioController.js
@@ -1,18 +1,27 @@
 import { StatusCode } from 'status-code-enum';
 import UsuarioService from '../../domain/service/UsuarioService';
-import { ErrorHandler } from '../../core/helpers/error';
 
 class UsuarioController {
 
+    constructor() {
+        this.usuarioService = new UsuarioService();
+    }
+
     async todosUsuarios(request, response) {
-        const usuarioService = new UsuarioService();
-        const usuarios = await usuarioService.buscarTodos();
-        if (usuarios)
-            return response.json(usuarios);
+        const usuarios = await this.usuarioService.buscarTodos();
+        if (usuarios.statusCode)
+            return response.status(usuarios.statusCode).json(usuarios);
         else
-            return response
-                .json(new ErrorHandler(StatusCode.ClientErrorNotFound, 'Não há usuário cadastrado.'))
-                .status(StatusCode.ClientErrorNotFound);
+            return response.status(StatusCode.SuccessOK).json(usuarios);
+    }
+
+    async cadastrarUsuarioComSenha(request, response) {
+        const { nome, senha } = request.body;
+        const usuarioCadastrado = await this.usuarioService.cadastrarUsuarioComSenha({ nome, senha });
+        if (usuarioCadastrado.statusCode)
+            return response.status(usuarioCadastrado.statusCode).json(usuarioCadastrado);
+        else
+            return response.status(StatusCode.SuccessCreated).json(usuarioCadastrado);
     }
 }
 
