# src/api/routes/index.js
@@ -80,6 +80,48 @@ routes.get(`/v1/usuarios`, asyncHandler(async (request, response) => {
     return await usuarioController.todosUsuarios(request, response);
 }));
 
+routes.post(`/v1/usuarios`, asyncHandler(async (request, response) => {
+    // #swagger.tags = ['Usuários']
+    // #swagger.description = 'Cadastrar um usuário com senha.'
+
+    /*  #swagger.parameters['UsuarioComSenha'] = {
+        in: 'body',
+        description: 'Cadastrar usuário com senha.',
+        schema: { $ref: '#/definitions/UsuarioComSenha' }
+    } */
+
+    /** #swagger.responses[201] = {
+        schema: { $ref: "#/definitions/Usuario" },
+        description: 'Usuário cadastrado.' 
+     } 
+    */
+
+    /** #swagger.responses[401] = {
+        schema: { $ref: "#/definitions/Error401" },
+        description: 'Não autorizado.' 
+     } 
+    */
+
+    /** #swagger.responses[403] = {
+        schema: { $ref: "#/definitions/Error403" },
+        description: 'Sem premissão.' 
+     } 
+    */
+
+    /** #swagger.responses[409] = {
+        schema: { $ref: "#/definitions/Error409" },
+        description: 'Duplicidade de dados.' 
+     } 
+    */
+
+    /** #swagger.responses[500] = {
+        schema: { $ref: "#/definitions/Error500" },
+        description: 'Erro interno.' 
+     }
+     */
+    return await usuarioController.cadastrarUsuarioComSenha(request, response);
+}));
+
 //#endregion
 
 export { routes }
